--- a/aula1.html
+++ b/aula1.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>Seja bem vindo!</h1>
+        <h1 id="titulo">Seja bem vindo!</h1>
 
         <script>
             document.write('Olá Mundo!');
